# adapter/http/controller/user.go
@@ -13,6 +13,7 @@ import (
 type IUserController interface {
 	UpdateUser(ctx *gin.Context)
 	GetFollowing(ctx *gin.Context)
+	GetFollowed(ctx *gin.Context)
 }
 
 type userController struct {
@@ -65,6 +66,27 @@ func (pc *userController) GetFollowing(ctx *gin.Context) {
 	presenter := presenter.NewUserPresenter(ctx)
 
 	u,err := pc.usc.GetFollowing(ctx)
+	if err != nil {
+		presenter.RenderError(err)
+		return
+	}
+	presenter.RenderUsers(u)
+}
+
+// @Summary フォローされてるユーザーの取得
+// @Tags user
+// @Accept  json
+// @Produce  json
+// @Security Bearer
+// @Success 200 {object} []model.Users
+// @Failure 400 {object} errors.ErrorResponse
+// @Failure 404 {object} errors.ErrorResponse
+// @Failure 500 {object} errors.ErrorResponse
+// @Router /users/followed [get]
+func (pc *userController) GetFollowed(ctx *gin.Context) {
+	presenter := presenter.NewUserPresenter(ctx)
+
+	u,err := pc.usc.GetFollowed(ctx)
 	if err != nil {
 		presenter.RenderError(err)
 		return
